# glymo

./: Cargo.toml
Documentation/: bit-string-matching-research.md  font-survey.md  wash-study-raw.txt
examples/: gen_symbol_pool.rs  render_png.rs
src/: bitmap.rs  color.rs  lib.rs  matcher.rs  repertoire.rs  sample.rs  symbol.rs
src/symbol_mode/: bitmap.rs  color.rs  generated.rs  matcher.rs  mod.rs  pool.rs  sample.rs  symbol.rs
