[package]
name = "glymo"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Fast, deterministic terminal-cell matcher: pixel patches → (codepoint, fg, bg)"
repository = "https://github.com/breadlam/glymo"

# Match the rest of the broadcast pipeline: prefer GCC-style codegen so
# inner-loop popcount + SIMD have a chance of competing with hand-tuned C.
[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
# Intentionally none. The core matcher is dependency-free by design;
# downstream crates bring their own image/codec/IO surface.

[dev-dependencies]
# Used only by examples and the offline pool generator. Library
# consumers don't link these — the runtime crate stays dependency-free.
png = "0.17"
fontdue = "0.9"
unicode-width = "0.2"
unicode_categories = "0.1"

[[example]]
name = "render_png"
path = "examples/render_png.rs"

[[example]]
name = "gen_symbol_pool"
path = "examples/gen_symbol_pool.rs"
